Fix syntax due to restrictions

--- a/jupyter_kernel/nada_notebook_example.ipynb
+++ b/jupyter_kernel/nada_notebook_example.ipynb
@@ -46,10 +46,20 @@
    },
    "outputs": [],
    "source": [
-    ";; Define a variable\n",
-    "(define x 42)\n",
-    "\n",
-    ";; Use the variable\n",
+    "(define x 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbcf1f6c",
+   "metadata": {
+    "vscode": {
+     "languageId": "scheme"
+    }
+   },
+   "outputs": [],
+   "source": [
     "x"
    ]
   },
@@ -72,11 +82,22 @@
    },
    "outputs": [],
    "source": [
-    ";; Define a function to calculate the square of a number\n",
     "(define (square n)\n",
-    "  (* n n))\n",
+    "  (* n n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32bae107",
+   "metadata": {
+    "vscode": {
+     "languageId": "scheme"
+    }
+   },
+   "outputs": [],
+   "source": [
     "\n",
-    ";; Call the function\n",
     "(square 5)"
    ]
   },
@@ -99,16 +120,48 @@
    },
    "outputs": [],
    "source": [
-    ";; Create a list\n",
-    "(define my-list '(1 2 3 4 5))\n",
-    "\n",
-    ";; Get the first element\n",
-    "(car my-list)\n",
-    "\n",
-    ";; Get everything except the first element\n",
-    "(cdr my-list)\n",
-    "\n",
-    ";; Map a function over a list\n",
+    "(define my-list '(1 2 3 4 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfc72693",
+   "metadata": {
+    "vscode": {
+     "languageId": "scheme"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "(car my-list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56a8f248",
+   "metadata": {
+    "vscode": {
+     "languageId": "scheme"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "(cdr my-list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98759fca",
+   "metadata": {
+    "vscode": {
+     "languageId": "scheme"
+    }
+   },
+   "outputs": [],
+   "source": [
     "(map square my-list)"
    ]
   },
@@ -131,18 +184,39 @@
    },
    "outputs": [],
    "source": [
-    ";; Conditional expression\n",
     "(if (> 5 3)\n",
     "    \"5 is greater than 3\"\n",
-    "    \"5 is not greater than 3\")\n",
-    "\n",
-    ";; Define a recursive function to calculate factorial\n",
+    "    \"5 is not greater than 3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0351ce5",
+   "metadata": {
+    "vscode": {
+     "languageId": "scheme"
+    }
+   },
+   "outputs": [],
+   "source": [
     "(define (factorial n)\n",
     "  (if (<= n 1)\n",
     "      1\n",
-    "      (* n (factorial (- n 1)))))\n",
-    "\n",
-    ";; Calculate factorial of 5\n",
+    "      (* n (factorial (- n 1)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "217f1d26",
+   "metadata": {
+    "vscode": {
+     "languageId": "scheme"
+    }
+   },
+   "outputs": [],
+   "source": [
     "(factorial 5)"
    ]
   }
