--- a/jupyter_kernel/nada_notebook_example.ipynb
+++ b/jupyter_kernel/nada_notebook_example.ipynb
@@ -14,14 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "445d7856",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5"
+     ]
+    }
+   ],
    "source": [
     ";; Simple arithmetic expression\n",
     "(+ 2 3)"
@@ -73,14 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "18558741",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "square"
+     ]
+    }
+   ],
    "source": [
     "(define (square n)\n",
     "  (* n n))"
@@ -88,14 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "32bae107",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "(square 5)"
@@ -111,56 +135,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7323e5ac",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my-list"
+     ]
+    }
+   ],
    "source": [
     "(define my-list '(1 2 3 4 5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "dfc72693",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1"
+     ]
+    }
+   ],
    "source": [
     "(car my-list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "56a8f248",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2 3 4 5)"
+     ]
+    }
+   ],
    "source": [
     "(cdr my-list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "98759fca",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1 4 9 16 25)"
+     ]
+    }
+   ],
    "source": [
     "(map square my-list)"
    ]
@@ -175,14 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "94bd7a70",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"5 is greater than 3\""
+     ]
+    }
+   ],
    "source": [
     "(if (> 5 3)\n",
     "    \"5 is greater than 3\"\n",
@@ -191,14 +255,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a0351ce5",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "factorial"
+     ]
+    }
+   ],
    "source": [
     "(define (factorial n)\n",
     "  (if (<= n 1)\n",
@@ -208,22 +280,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "217f1d26",
    "metadata": {
     "vscode": {
      "languageId": "scheme"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "265252859812191058636308480000000"
+     ]
+    }
+   ],
    "source": [
-    "(factorial 5)"
+    "(factorial 30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec78d9ca",
+   "metadata": {
+    "vscode": {
+     "languageId": "scheme"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "NadaLisp",
+   "language": "scheme",
+   "name": "nada"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".scm",
+   "mimetype": "text/x-scheme",
+   "name": "nada",
+   "pygments_lexer": "scheme"
   }
  },
  "nbformat": 4,
