--- a/jupyter_kernel/nada_notebook_example.ipynb
+++ b/jupyter_kernel/nada_notebook_example.ipynb
@@ -20,10 +20,10 @@
       "outputs": [],
       "source": [
         ";; Simple arithmetic\n",
-        "(+ 2 3 4)  ; Addition\n",
-        "(- 10 5)   ; Subtraction\n",
-        "(* 3 4)    ; Multiplication\n",
-        "(/ 10 2)   ; Division"
+        "(display (+ 2 3 4))  ; Addition\n",
+        "(display (- 10 5))   ; Subtraction\n",
+        "(display (* 3 4))    ; Multiplication\n",
+        "(/ 10 2)             ; Division"
       ]
     },
     {
@@ -165,7 +165,7 @@
       "source": [
         ";; Filter: keep elements that satisfy a predicate\n",
         "(define (even? x)\n",
-        "  (= (remainder x 2) 0))\n",
+        "  (= (modulo x 2) 0))\n",
         "\n",
         ";; Get only even numbers\n",
         "(filter even? '(1 2 3 4 5 6 7 8))"
